[gd_scene load_steps=2 format=3 uid="uid://d2kpakc8oneu8"]

[ext_resource type="Script" path="res://addons/fmod/tool/property_editors/FmodParameterUi.gd" id="1_neje7"]

[node name="FmodParameterUi" type="VBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_neje7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="NameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ValueSpinBox" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1

[node name="Slider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.1
